# Mcp_Vtiger_claude

./: .env.example  .gitignore  Complete_MCP_Implementation.docx  Dockerfile  MCP_Implementation.docx  README.md  Vtiger_Claude_MCP.docx  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt
docs/: CLAUDE_SETUP.md  PROJECT_JOURNEY_AND_TECHNICAL_HISTORY.md  TECHNICAL.md
scripts/: connection_check.py  describe_fields.py  describe_raw.py  docx_helpers.py  generate_complete_docx.py  generate_docx.py  generate_mcp_implementation_docx.py  mcp_check.py  test_session_retry.py  test_tools.py  test_user_access.py
src/vtiger_mcp/: __init__.py  config.py  logging_config.py  main.py  middleware.py
src/vtiger_mcp/auth/: __init__.py  users.py
src/vtiger_mcp/tools/: __init__.py  crm.py
src/vtiger_mcp/vtiger/: __init__.py  client.py
tests/: conftest.py  helpers.py  test_auth_users.py  test_config.py  test_crm_tools.py  test_main_routes.py  test_middleware.py  test_vtiger_client.py
